redo graphics for next and prev

--- a/TODO
+++ b/TODO
@@ -67,6 +67,8 @@ Sort actions on action over page
 Image gallery
 Upload images to image gallery
 Event RSVP form
+Tab JS
+jQuery UI calendar for event creation
 
 
 Code cleanup
