Make an image spite Removed all the old theme images that are now on the sprite Added icons to nav Replaced follow us icons version from AI file, add roll over state Overview graphics for challenges, communities, events

--- a/TODO
+++ b/TODO
@@ -1,12 +1,11 @@
+Need from Poccuo
+================
+
+
 Graphics
 ========
-
-Add icons to nav
-Replace follow us icons version from AI file, add roll over state
-Overview graphics for challenges, communities, events
 Breadcrumb graphic (tiny icon )
 Add graphics for badges
-Redo left and right arrows on home page
 
 Text
 ====
