Adding heading text to all show pages

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 Need from Poccuo
 ================
-
+logged out nav
+badge graphics
 
 Graphics
 ========
@@ -10,10 +11,6 @@ Add graphics for badges
 Text
 ====
 About us in the footer
-Communites show page
-Challenges show page
-events show page
-badges show page
 
 
 HTML/CSS
