added link to about page in footer

--- a/TODO
+++ b/TODO
@@ -65,7 +65,7 @@ Upload images to image gallery
 Event RSVP form
 Tab JS
 jQuery UI calendar for event creation
-
+Fix change date, cancel functionality of action detail page
 
 Code cleanup
 ============
